@@ -1,4 +1,4 @@
-MANIFEST for my-autoconf, version t20010616
+MANIFEST for my-autoconf, version t20010622
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 config.guess                    autoconf's config.guess
